Fixing crash when cancelling search for duplicates

BUG: 379315